--- a/sample/prod/builds/Dockerfile
+++ b/sample/prod/builds/Dockerfile
@@ -1,5 +1,6 @@
 FROM pyar6329/rails-base:prod-2.3.1-6.3.1
 MAINTAINER Tsukasa Arima
 
-ENV RAILS_ENV=production
+ENV RAILS_ENV=production NODE_ENV=production
+
 EXPOSE 3000
