change push master only

--- a/shippable.yml
+++ b/shippable.yml
@@ -4,13 +4,13 @@ language: none
 
 build:
   ci:
-    - sudo docker build -t pyar6329/rails-base:data-latest -f ./data/Dockerfile ./data
-    - sudo docker build -t pyar6329/rails-base:dev-2.3.1-6.3.1 -f ./dev/Dockerfile ./dev
-    - sudo docker build -t pyar6329/rails-base:prod-2.3.1-6.3.1 -f ./prod/Dockerfile ./prod
+    - docker build -t pyar6329/rails-base:data-latest -f ./data/Dockerfile ./data
+    - docker build -t pyar6329/rails-base:dev-2.3.1-6.3.1 -f ./dev/Dockerfile ./dev
+    - docker build -t pyar6329/rails-base:prod-2.3.1-6.3.1 -f ./prod/Dockerfile ./prod
   post_ci:
-    - sudo docker push pyar6329/rails-base:data-latest
-    - sudo docker push pyar6329/rails-base:dev-2.3.1-6.3.1
-    - sudo docker push pyar6329/rails-base:prod-2.3.1-6.3.1
+    - if [ "$IS_PULL_REQUEST" == "false" ] && [ "$BRANCH" == "master" ]; then docker push pyar6329/rails-base:data-latest; fi
+    - if [ "$IS_PULL_REQUEST" == "false" ] && [ "$BRANCH" == "master" ]; then docker push pyar6329/rails-base:dev-2.3.1-6.3.1; fi
+    - if [ "$IS_PULL_REQUEST" == "false" ] && [ "$BRANCH" == "master" ]; then docker push pyar6329/rails-base:prod-2.3.1-6.3.1; fi
 
 integrations:
   hub:
