--- a/sample/prod/docker-compose.yml
+++ b/sample/prod/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     environment:
       - RAILS_ENV=production
       - DB_HOST=postgresql
+	    - DB_PORT=5432
       - DB_DATABASE=rails
       - DB_USERNAME=rails
       - DB_PASSWORD=rails
