--- a/dev-ruby/Dockerfile
+++ b/dev-ruby/Dockerfile
@@ -15,10 +15,10 @@ RUN set -x \
     && chmod u+x /usr/local/bin/docker-entrypoint.sh \
     && apk add --update --upgrade --no-cache --virtual .rails-dependency-packages \
         ruby-dev zlib-dev libxml2-dev libxml2-utils libxslt-dev tzdata yaml-dev \
-        readline-dev sqlite-dev postgresql-dev mysql-dev bash \
+        readline-dev libpq bash \
     && apk add --update --upgrade --no-cache --virtual .build-packages openssl-dev \
         ca-certificates wget curl-dev build-base alpine-sdk linux-headers paxctl \
-        make gcc g++ libgcc libstdc++ gnupg \
+        make gcc g++ libgcc libstdc++ gnupg postgresql-dev \
     && wget https://github.com/jwilder/dockerize/releases/download/${DOCKERIZE_VERSION}/dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz \
     && rm dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz
